# tmdb-fantasy-pipeline

./: .gitignore  fetch_fantasy.py  main.py  process_fantasy.py  pyproject.toml  storytelling_graph.py
data/: fantasy_movies.db  raw_fantasy_2026-04-07.json
data/processed/: movie_cast.csv  movie_companies.csv  movie_countries.csv  movie_crew.csv  movie_details.csv  movie_genres.csv  movie_languages.csv  movies.csv  production_companies.csv  production_countries.csv  spoken_languages.csv  upcoming_movie_genres.csv  upcoming_movies.csv
data/raw/: raw_fantasy_2026-04-08.json  raw_fantasy_2026-04-09.json  raw_fantasy_2026-04-10.json  raw_fantasy_2026-04-20.json  raw_fantasy_2026-04-22.json  upcoming_fantasy_2026-04-09.json  upcoming_fantasy_2026-04-10.json  upcoming_fantasy_2026-04-20.json  upcoming_fantasy_2026-04-22.json
notebook/: eda.ipynb
src/: config.py  database.py  fetch_fantasy.py  fetch_upcoming.py  main.py  pipeline.py  process_fantasy.py  process_upcoming.py
src/dashboard/: app.py  data.py
src/dashboard/pages/: 1_Overview.py  2_Movies.py  3_Analytics.py
src/data/raw/: raw_fantasy_2026-04-09.json
src/db/: database.py
src/fetch/: details.py  fantasy.py  upcoming.py
src/process/: details.py  fantasy.py  upcoming.py
src/utils/: country_lookup.py  movie_ids.py  tmdb_client.py
